--- a/slowql.opam
+++ b/slowql.opam
@@ -11,7 +11,7 @@ doc: "https://url/to/documentation"
 bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "dune" {>= "3.20"}
-  "ocaml"
+  "ocaml" {>= "5.2.0"}
   "alcotest" {with-test}
   "re"
   "yojson"
