--- a/slowql.opam
+++ b/slowql.opam
@@ -13,6 +13,7 @@ depends: [
   "dune" {>= "3.20"}
   "ocaml" {>= "5.2.0"}
   "alcotest" {with-test}
+  "ocamlformat" {build}
   "re"
   "yojson"
   "csv"
