--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   create-release:
     name: Create Release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
       - name: Checkout code
@@ -17,15 +17,15 @@ jobs:
       - name: Set up OCaml
         uses: ocaml/setup-ocaml@v2
         with:
-          ocaml-compiler: 4.14.x
+          ocaml-compiler: 5.2.x
+          dune-cache: true
+          opam-disable-sandboxing: true
       
       - name: Install dependencies
-        run: |
-          opam install . --deps-only
+        run: opam install . --deps-only
       
       - name: Build release binary
-        run: |
-          opam exec -- dune build --release
+        run: opam exec -- dune build --release
       
       - name: Create release archive
         run: |
